# spaceship_titanic

./: README.md  pyproject.toml
src/spaceship_titanic/: analysis.ipynb  main.ipynb  submission.csv
