[project]
name = "spaceship-titanic"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "peloeil", email = "peloeil20@gmail.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.2",
    "matplotlib>=3.7.4",
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "spaceship_titanic:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/spaceship_titanic"]
